Terminación de la tarea

--- a/practicaSQLITE/latex/desarrollo.tex
+++ b/practicaSQLITE/latex/desarrollo.tex
@@ -9,7 +9,7 @@ Para desarrollar esta actividad se instalo SQLite3 por medio del administrador d
     > npm install sqlite3
 \end{lstlisting}
 
-Luego de haber instalado el paquete, se creo la carpeta node\_modules, en la cual se encuentra el paquete sqlite3. Se procedió a crear el archivo index.js, en el cual se inicio con la conexión a la base de datos imdb.db.\\
+Luego de haber instalado el paquete, se creo la carpeta node\_modules, en la cual se encuentra el paquete sqlite3. Se procedió a crear el archivo index.js, en el cual se inicio con la conexión a la base de datos imdb.db.
 
 \begin{lstlisting}
     const sqlite = new require('sqlite3')
